fix z-index of selectbox; update bower version

--- a/src/style/form.less
+++ b/src/style/form.less
@@ -502,7 +502,7 @@
 			select
 			{
 				position: absolute;
-				z-index: 1;
+				z-index: 2;
 				top: 0;
 				left: 0;
 				right: 0;
